Revision history for MooseX-Types

{{$NEXT}}

0.31    2011-12-22
        - Add support for qw( :all ) on MooseX::Types::Combine libraries. (kentnl)

0.30    2011-09-17
        - Fix a bug in the tests that caused failures with Moose HEAD. (doy)

0.29    2011-08-20
        - Require namespace::clean 0.19. Tests fail with 0.18. Reported by
          Ruslan Zakirov. RT #67923.

0.28    2011-08-02
        - Fixed git and bug tracking info in META.{yml,json}. Reported by
          Petter Rabbitson. (Dave Rolsky)

0.27    2011-06-06
        - A better fix for type constraint changes in Moose 2.0100. (doy)

0.26    2011-06-05
        - Small changes for forward compatibility with Moose 2.0100, when it
          is released. (Dave Rolsky)
        - Some small doc cleanup and improvements. (Dave Rolsky)

0.25    2010-11-30
        - The test suite now uses Test::Fatal instead of Test::Exception
          (Karen Etheridge).
        - Modernized tests to use Test::Requires and done_testing. (Dave
          Rolsky)
        - MooseX::Types::Combine is a little more efficient, and only tries to
          load the libraries it's combining when that list is set. It also
          checks that each lib in the list actually provides types. (Dave
          Rolsky).
        - The MooseX::Types docs now contain a pointer to
          MooseX::Types::Combine. (Dave Rolsky)

0.24    2010-09-11
        - Avoid more warnings from Moose 1.09 in tests (Dave Rolsky).

0.23    2010-07-19
        - Avoid warnings from Moose 1.09 in tests (Dave Rolsky).

0.22    2010-06-01
        - Update docs to mention MRO::Compat rather than Class::C3.
        - Added '0+' overloading to solve the type constraint equality
          regression introduced when Moose 1.05 tightened the rules
          determing type constraint equality.  Added tests for the
          regression.

0.21    2009-12-23
        - Attempting to import a non-existent type from a combined type